--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="/styles/portfolio.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./images/assets/logo-navbar.png" alt="">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li class="Features">Features</li>
+                    <li class="How It Works">How It Works</li>
+                    <li class="Why It's Different">Why It's Different</li>
+
+                </ul>
+            </div>
+            <div>
+                <button class="btn">Get Early Access</button>
+            </div>
+        </nav>
+        
+    </header>
+    <main>
+        <section class="hero">
+            <div class="hero-container">
+                <div class="early-access">
+                   <!-- <span class="dot">.</span>  -->
+                   Early Access Now Open
+                </div>
+                <div class="hero-title">
+                    <h1>Structured thinking,<br><span class="text-green">not just note-taking.</span></h1>
+                </div>
+                    <p>A private space to store notes, links, and learning summaries — designed to
+help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <div>
+                <button class="">Start Building Your Vault</button>
+                <button class="">See How It Works</button>
+            </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
