button and text update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
             <div>
-                <button class="btn">Get Early Access</button>
+                <button class="btn nav-btn">Get Early Access</button>
             </div>
         </nav>
         
@@ -34,13 +34,15 @@
                    Early Access Now Open
                 </div>
                 <div class="hero-title">
-                    <h1>Structured thinking,<br><span class="text-green">not just note-taking.</span></h1>
+                    <h1>Structured Thinking,<br><span class="text-green">Not Just Note-Taking.</span></h1>
                 </div>
-                    <p>A private space to store notes, links, and learning summaries — designed to
+                    <div class="hero-paragraph">
+                        <p >A private space to store notes, links, and learning summaries — designed to <br>
 help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <div>
-                <button class="">Start Building Your Vault</button>
-                <button class="">See How It Works</button>
+                    </div>
+            <div class="hero-btn">
+                <button class="btn">Start Building Your Vault</button>
+                <button class="btn">See How It Works</button>
             </div>
 
             </div>
