--- a/index.html
+++ b/index.html
@@ -38,13 +38,24 @@
                 </div>
                     <div class="hero-paragraph">
                         <p >A private space to store notes, links, and learning summaries — designed to <br>
-help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     </div>
-            <div class="hero-btn">
-                <button class="btn">Start Building Your Vault</button>
-                <button class="btn">See How It Works</button>
-            </div>
+                <div class="hero-btn">
+                    <button class="btn">Start Building Your Vault</button>
+                    <button class="btn">See How It Works</button>
+                </div>
 
+            </div>
+        </section>
+        <section >
+            <div class="notes">
+                <h2>Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                <div>
+                    <div class="notes-container">
+                        
+                    </div>
+                </div>
             </div>
         </section>
     </main>
