notes section updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/portfolio.css">
 </head>
-<body>
+<body class="font-open-sans">
     <header>
         <nav>
             <div class="logo">
@@ -47,12 +47,34 @@
 
             </div>
         </section>
-        <section >
+        <section id="container">
             <div class="notes">
-                <h2>Notes don't fail, Structure does.</h2>
-                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                <div class="notes-title">
+                    <h2>Notes don't fail, Structure does.</h2>
+                    <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                </div>
                 <div>
                     <div class="notes-container">
+                        <div class="notes-card">
+                            <div class="notes-image"><img src="./images/assets/Vector.png" alt=""></div>
+                            <h4>Scattered notes</h4>
+                            <p>Your ideas live in 10 different apps, none of them connected.</p>
+                        </div>
+                        <div class="notes-card">
+                            <div class="notes-image"><img src="./images/assets/Bookmarks.png" alt=""></div>
+                            <h4>Bookmark overload</h4>
+                            <p>Hundreds of saved links you'll never revisit or remember.</p>
+                        </div>
+                        <div class="notes-card">
+                             <div class="notes-image"><img src="./images/assets/Brain.png" alt=""></div>
+                            <h4>No idea connections</h4>
+                            <p>Insights stay isolated, never building into bigger understanding.</p>
+                        </div>
+                        <div class="notes-card card-4">
+                             <div class="notes-image"><img src="./images/assets/Info.png" alt=""></div>
+                            <h4>Forgetting what you learned</h4>
+                            <p>Knowledge fades because there's no system to retain it.</p>
+                        </div>
                         
                     </div>
                 </div>
