create all section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,62 @@
                 </div>
             </div>
         </section>
+        <section id="container">
+            <div class="brain-container">
+                <div class="brain-image">
+                    <img src="./images/assets/knowledge.png" alt="">
+                </div>
+                <div class="left-container">
+                    <div class="brain-content">
+                    <h6>THE SOLUTION</h6>
+                    <h2>Your second brain,<br> by design.</h2>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                     <div>
+                        <ul>
+                            <li>Capture ideas with structure built-in from day one</li>
+                            <li>Connect related concepts automatically as you write</li>
+                            <li>Build lasting knowledge through reflection prompts/li>
+                            <li>Find anything instantly with semantic search</li>
+                            
+                        </ul>
+                     </div>   
+                </div>
+                </div>
+            </div>
+        </section>
+        <section id="container" style="background: #f7f2f6">
+            <div class="think">
+                <div class="think-upper">
+                    <h2>Ready to think more clearly?</h2>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+                </div>
+                <div class="think-lower">
+                    <button class="btn">Get Early Access</button>
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+
+            </div>
+        </section>
+        <footer>
+            <div class="footer-container">
+                <footer class="footer-content">
+                    <div class="footer-logo">
+                        <img src="./images/assets/logo-footer.png" alt="">
+                    </div>
+                    <div class="footer-social-link">
+                        <h3>Social Link</h3>
+                        <ul>
+                            <li><a href="./images/assets/social_13147340.png"></a></li>
+                            <li><a href="./images/assets/social_15522241.png"></a></li>
+                            <li><a href="./images/assets/social_15522253.png"></a></li>
+                        </ul>
+                    </div>
+                </footer>
+                <footer class="footer-bottom">
+                    <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+                </footer>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
