nav text size weight correction,added dot in early access-hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-container">
                 <div class="early-access">
-                   <!-- <span class="dot">.</span>  -->
+                   <span class="dot">.</span> 
                    Early Access Now Open
                 </div>
                 <div class="hero-title">
