hero button correction

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
                         help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                     </div>
                 <div class="hero-btn">
-                    <button class="btn">Start Building Your Vault</button>
-                    <button class="btn">See How It Works</button>
+                    <button class="btn">Start Building Your Vault
+                        <img src="./images/assets/ArrowRight.png" alt="arrow right icon">
+                    </button>
+                    <button class="btn play-btn">
+                        <img src="./images/assets/play-button.png" alt="play button icon">
+                        See How It Works</button>
                 </div>
 
             </div>
