tik mark added and aligned with list in brain section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="container">
             <div class="notes">
                 <div class="notes-title">
-                    <h2>Notes don't fail, Structure does.</h2>
+                    <h2>Notes Don't Fail, Structure Does.</h2>
                     <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
                 </div>
                 <div>
@@ -62,7 +62,7 @@
                         <div class="notes-card">
                             <div class="notes-image"><img src="./images/assets/Vector.png" alt=""></div>
                             <h4>Scattered notes</h4>
-                            <p>Your ideas live in 10 different apps, none of them connected.</p>
+                            <p>Your ideas live in 10 different apps,none of them connected.</p>
                         </div>
                         <div class="notes-card">
                             <div class="notes-image"><img src="./images/assets/Bookmarks.png" alt=""></div>
@@ -72,7 +72,7 @@
                         <div class="notes-card">
                              <div class="notes-image"><img src="./images/assets/Brain.png" alt=""></div>
                             <h4>No idea connections</h4>
-                            <p>Insights stay isolated, never building into bigger understanding.</p>
+                            <p>Insights stay isolated,never building into bigger understanding.</p>
                         </div>
                         <div class="notes-card card-4">
                              <div class="notes-image"><img src="./images/assets/Info.png" alt=""></div>
@@ -92,14 +92,14 @@
                 <div class="left-container">
                     <div class="brain-content">
                     <h6>THE SOLUTION</h6>
-                    <h2>Your second brain,<br> by design.</h2>
-                    <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                    <h2>Your Second Brain,<br>Structured By Design</h2>
+                    <p>Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
                      <div>
-                        <ul>
-                            <li>Capture ideas with structure built-in from day one</li>
-                            <li>Connect related concepts automatically as you write</li>
-                            <li>Build lasting knowledge through reflection prompts/li>
-                            <li>Find anything instantly with semantic search</li>
+                        <ul class="brain-list">
+                            <li><img src="./images/assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                            <li><img src="./images/assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                            <li><img src="./images/assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                            <li><img src="./images/assets/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
                             
                         </ul>
                      </div>   
