think section updated with style

--- a/index.html
+++ b/index.html
@@ -107,16 +107,18 @@
                 </div>
             </div>
         </section>
-        <section id="container" style="background: #f7f2f6">
+        <section id="container" style="background: #f7f2f6; margin-bottom: 120px; ">
             <div class="think">
-                <div class="think-upper">
-                    <h2>Ready to think more clearly?</h2>
-                    <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
-                </div>
-                <div class="think-lower">
-                    <button class="btn">Get Early Access</button>
-                    <p>Free during early access • No credit card needed</p>
-                </div>
+            <div class="think-upper">
+                <h2>Ready To Think More Clearly?</h2>
+                <p>Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
+            </div>
+            <div class="think-lower">
+                <button class="btn">Get Early Access
+                    <img src="./images/assets/ArrowRight.png" alt="">
+                </button>
+                <p>Free during early access • No credit card needed</p>
+            </div>
 
             </div>
         </section>
