--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
                     <div class="footer-social-link">
                         <h3>Social Link</h3>
                         <ul>
-                            <li><a href="./images/assets/social_13147340.png"></a></li>
-                            <li><a href="./images/assets/social_15522241.png"></a></li>
-                            <li><a href="./images/assets/social_15522253.png"></a></li>
+                            <li><a href="https://twitter.com"><img src="./images/assets/letter-x.png" alt="Twitter"></a></li>
+                            <li><a href="https://linkedin.com"><img src="./images/assets/linkedin.png" alt="LinkedIn"></a></li>
+                            <li><a href="https://facebook.com"><img src="./images/assets/facebook.png" alt="Facebook"></a></li>
                         </ul>
                     </div>
                 </footer>
+                <hr>
                 <footer class="footer-bottom">
                     <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
                 </footer>
